--- a/src/main/resources/templates/internaldispatches/internalDispatchToInfo.html
+++ b/src/main/resources/templates/internaldispatches/internalDispatchToInfo.html
@@ -141,6 +141,7 @@
         <input type="hidden" th:field="*{receivedInternalDate}">
         <input type="hidden" th:field="*{internalHandlerName}">
         <input type="hidden" th:field="*{internalHandlerPhoneNumber}">
+        <input type="hidden" th:field="*{isAlbum}">
         <input type="hidden" th:field="*{albumName}">
         <input type="hidden" th:field="*{documents}">
 
