Add icon for External Dispatches

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="col-md-4">
                 <a th:href="@{/externaldispatches/list}">
-<!--                    <img th:src="@{/images/companies.png}"/>-->
+                    <img th:src="@{/images/externals.png}"/>
                     <h4 class="text-center">External dispatches</h4>
                 </a>
             </div>
