Add applicability functional to DocumentController and document htmls

--- a/src/main/resources/templates/documents/documentTo-changes-list.html
+++ b/src/main/resources/templates/documents/documentTo-changes-list.html
@@ -75,7 +75,7 @@
         <input type="hidden" th:field="*{inventoryNumber}">
         <input type="hidden" th:field="*{receiptDate}">
         <input type="hidden" th:field="*{status}">
-        <input type="hidden" th:field="*{applicability}">
+        <input type="hidden" th:field="*{applicabilities}">
         <input type="hidden" th:field="*{form}">
         <input type="hidden" th:field="*{changeNumber}">
         <input type="hidden" th:field="*{changeNumber}">
