--- a/src/main/resources/templates/documents/list-documents.html
+++ b/src/main/resources/templates/documents/list-documents.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sd="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
 
@@ -21,36 +21,167 @@
         <h3>Documents List</h3>
         <hr>
 
-
-
-        <form action="#" th:action="@{/documents/list}" method="get">
-            <div class="row mb-1">
-                <div class="col-sm-3">
-                    <input type="text" th:name="decimalNum" th:value="${param.decimalNum}" th:class="${errors == null} ? 'form-control' : 'form-control is-invalid'" placeholder="Decimal number">
-                    <span class="help-block" th:if="${errors != null}">
-                        <ul>
-                            <li class="text-danger" th:each="err : ${errors}" th:text="${err}"/>
-                        </ul>
-                    </span>
+        <div class="container-fluid p-3 my-3 bg-dark text-white">
+            <form action="#" th:action="@{/documents/list}" method="get">
+                <div class="row mb-3">
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:name="decimalNumber" th:value="${param.decimalNumber}" placeholder="Decimal number">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:name="name" th:value="${param.name}" placeholder="Name">
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="developer">
+                            <option value="">Developer (not selected)</option>
+                            <option th:each="drop : ${developers}"
+                                    th:value="${drop.name}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name == developer}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="originalHolder">
+                            <option value="">Original holder (not selected)</option>
+                            <option th:each="drop : ${originalHolders}"
+                                    th:value="${drop.name}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name == originalHolder}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="status">
+                            <option value="">Status (not selected)</option>
+                            <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Status).values()}"
+                                    th:value="${drop}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name.toUpperCase() == status}">
+                            </option>
+                        </select>
+                    </div>
                 </div>
-                <div class="col-sm-3">
-                    <select th:class="${errors == null} ? 'form-control selectpicker' : 'form-control selectpicker is-invalid'" name="developer">
-                        <option value="">Developer (not selected)</option>
-                        <option th:each="drop : ${developers}"
-                                th:value="${drop}"
-                                th:text="${drop}"
-                                th:selected="${drop == developerParameter}">
-                        </option>
-                    </select>
-                    <span class="help-block" th:if="${errors != null}">
-                        <ul>
-                            <li class="text-danger" th:each="err : ${errors}" th:text="${err}"/>
-                        </ul>
-                    </span>
+                <div class="row mb-2">
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="stage">
+                            <option value="">Stage (not selected)</option>
+                            <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Stage).values()}"
+                                    th:value="${drop}"
+                                    th:text="${drop}"
+                                    th:selected="${drop.name() == stage}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-sm-2">
+                        <select class="form-control selectpicker" name="form">
+                            <option value="">Form (not selected)</option>
+                            <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Form).values()}"
+                                    th:value="${drop}"
+                                    th:text="${drop.name}"
+                                    th:selected="${drop.name.toUpperCase() == form}">
+                            </option>
+                        </select>
+                    </div>
+                    <div class="col-sm-1">
+                        <div th:text="'R. Date (After):'" class="h6 thead-dark align-middle text-center"></div>
+                    </div>
+                    <div class="col-sm-3">
+                        <input type="date" class="form-control" th:name="after" th:value="${param.after}">
+                    </div>
+                    <div class="col-sm-1">
+                        <div th:text="'R. Date (Before):'" class="h6 thead-dark align-middle text-center"></div>
+                    </div>
+                    <div class="col-sm-3">
+                        <input type="date" class="form-control" th:name="before" th:value="${param.before}">
+                    </div>
                 </div>
-            </div>
-            <button type="submit" class="btn btn-info col-2">Search</button>
-        </form>
+                <button type="submit" class="btn btn-info col-2">Search</button>
+                <a th:href="@{/documents/list}" class="btn btn-danger col-2">Clear filters</a>
+            </form>
+        </div>
+<!--        <form action="#" th:action="@{/documents/list}" method="get">-->
+<!--            <div class="row mb-1">-->
+<!--                <div class="col-sm-2">-->
+<!--                    <input type="text" class="form-control" th:name="decimalNumber" th:value="${param.decimalNumber}" placeholder="Decimal number">-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <input type="text" class="form-control" th:name="name" th:value="${param.name}" placeholder="Name">-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <select class="form-control selectpicker" name="developer">-->
+<!--                        <option value="">Developer (not selected)</option>-->
+<!--                        <option th:each="drop : ${developers}"-->
+<!--                                th:value="${drop.name}"-->
+<!--                                th:text="${drop.name}"-->
+<!--                                th:selected="${drop.name == developer}">-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <select class="form-control selectpicker" name="originalHolder">-->
+<!--                        <option value="">Original holder (not selected)</option>-->
+<!--                        <option th:each="drop : ${originalHolders}"-->
+<!--                                th:value="${drop.name}"-->
+<!--                                th:text="${drop.name}"-->
+<!--                                th:selected="${drop.name == originalHolder}">-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <input type="text" class="form-control" th:name="inventoryNumber" th:value="${param.inventoryNumber}" placeholder="Inventory number">-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <select class="form-control selectpicker" name="status">-->
+<!--                        <option value="">Status (not selected)</option>-->
+<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Status).values()}"-->
+<!--                                th:value="${drop}"-->
+<!--                                th:text="${drop.name}"-->
+<!--                                th:selected="${drop.name.toUpperCase() == status}">-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="row mb-1">-->
+<!--                <div class="col-sm-2">-->
+<!--                    <select class="form-control selectpicker" name="stage">-->
+<!--                        <option value="">Stage (not selected)</option>-->
+<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Stage).values()}"-->
+<!--                                th:value="${drop}"-->
+<!--                                th:text="${drop}"-->
+<!--                                th:selected="${drop.name() == stage}">-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <select class="form-control selectpicker" name="form">-->
+<!--                        <option value="">Form (not selected)</option>-->
+<!--                        <option th:each="drop : ${T(com.igar15.filecabinet.entity.enums.Form).values()}"-->
+<!--                                th:value="${drop}"-->
+<!--                                th:text="${drop.name}"-->
+<!--                                th:selected="${drop.name.toUpperCase() == form}">-->
+<!--                        </option>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <div th:text="'After:'" class="h6 thead-dark"></div>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <input type="date" class="form-control" th:name="after" th:value="${param.after}">-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <div th:text="'Before:'" class="h6 thead-dark"></div>-->
+<!--                </div>-->
+<!--                <div class="col-sm-2">-->
+<!--                    <input type="date" class="form-control" th:name="before" th:value="${param.before}">-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <button type="submit" class="btn btn-info col-2">Search</button>-->
+<!--            <a th:href="@{/documents/list}" class="btn btn-danger col-2">Clear filters</a>-->
+<!--        </form>-->
+
 
         <br><br>
 
@@ -59,7 +190,7 @@
         <table class="table table-bordered table-hover">
             <thead class="thead-dark text-center">
                 <tr>
-                    <th class="align-middle">Decimal number</th>
+                    <th><a class="sorted" sd:pagination-sort="decimalNumber">Decimal number</a></th>
                     <th class="align-middle">Name</th>
                     <th class="align-middle">Inventory number</th>
                     <th class="align-middle">Stage</th>
@@ -85,6 +216,29 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="row mb-3">
+            <div class="col-sm-6">
+                Show <span sd:page-size-selector="javascript"></span> entries
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div sd:pagination-summary="">info</div>
+            </div>
+            <div class="col-sm-6">
+                <nav class="pull-right">
+                    <ul class="pagination" sd:pagination-split="5" sd:pagination="full">
+                        <!-- Pagination created by SpringDataDialect, this content is just for mockup -->
+                        <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
+                        <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+
     </div>
 
     <div class="container" th:replace="fragments/footer :: footer">
